[package]
name = "runny"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
description = "Run a program inside its own process group"

[dependencies]
shlex = "0.1.1"

[target.'cfg(unix)'.dependencies]
tty = { git = "https://github.com/xobs/tty-rs.git", rev = "42599fb207c2c1a81b45a1e9985a16fc33596151" }
chan-signal = "0.2.0"
libc = "0.2.21"
nix = "0.8.0"
termios = "0.2.*"