[package]
name = "runny"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
description = "Run a program inside its own process group"
license = "MIT"
repository = "https://github.com/xobs/runny"

[dependencies]
shlex = "0.1.1"
fd = "0.2.2"
nix = "0.8.0"
kernel32-sys = "0.2.2"
user32-sys = "0.2.0"
winapi = "0.2.2"

[target.'cfg(unix)'.dependencies]
termios = "0.2.2"

[target.'cfg(windows)'.dependencies]