[package]
name = "runny"
version = "1.2.4"
authors = ["Sean Cross <sean@xobs.io>"]
description = "Run a program inside its own process group"
license = "MIT"
repository = "https://github.com/xobs/runny"

[dependencies]
shlex = "0.1.1"
nix = "0.9.0"
kernel32-sys = "0.2.2"
user32-sys = "0.2.0"
winapi = "0.2.2"

[target.'cfg(unix)'.dependencies]

[target.'cfg(windows)'.dependencies]
